// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PanelItem renders 1`] = `
<Styled(styled.section)>
  <styled.div
    highlight={false}
  >
    <styled.img
      alt="Foo"
      src="Baz"
    />
    <styled.section>
      <Styled(Styled(styled.p))>
        Foo
      </Styled(Styled(styled.p))>
      <styled.p>
        Bar
      </styled.p>
    </styled.section>
  </styled.div>
</Styled(styled.section)>
`;

exports[`PanelItem renders 2`] = `
<Styled(styled.section)>
  <styled.div
    highlight={true}
  >
    <styled.img
      alt="Foo"
      src="Baz"
    />
    <styled.section>
      <Styled(Styled(styled.p))>
        Foo
      </Styled(Styled(styled.p))>
      <styled.p>
        Bar
      </styled.p>
    </styled.section>
  </styled.div>
</Styled(styled.section)>
`;
